initial commit of portfolio project files

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>hi i'm shezan.</h1>
+        <p>i'm a 17 year old student following my curiosity while building cool sh*t.</p>
+
+    </body>
+</html>
 <head></head>
