add projects.html file with initial structure and navigation

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav class="vertical-navbar">
+            <a href="index.html">about</a>
+            <a href="projects.html">projects</a>
+            <a href="people.html">people</a>
+        </nav>
         <h1>hi i'm shezan.</h1>
-        <p>i'm a 17 year old student following my curiosity while building cool sh*t.</p>
+        <p>When COVID hit the world, I was just 12. At that age, the only thing that <br>
+            excited me more than playing games was the idea of making money online.<br>
+        </p>
+
+        <p>The first money I ever made came from sneaker reselling. Back then,<br>
+            it was the most popularized opportunity teens knew about.</p><p>I decided to start a small
+            sneaker marketplace on Discord. Acted as<br> an escrow.. checked sneakers
+            for authenticity, and earned a commision.<br>By the end of the first month, I had made around $500.
+        </p>
+        <p>Now.. i'm 17 years old and building cool sh*t w/ hackclub</p>
+        
 
     </body>
 </html>
-<head></head>
+<head></head>   
